# sketcher

./: .gitignore  CMakeLists.txt  Makefile  Readme.md
plotting/: plotting.py
runners/: runner.py
src/: Arguments.cpp  Arguments.hpp  main.cpp  utils.cpp  utils.hpp
src/commands/: AnalyseCommand.cpp  AnalyseCommand.hpp  SketchCommand.cpp  SketchCommand.hpp  TestCommand.cpp  TestCommand.hpp  common.cpp  common.hpp
src/distribution/: Distribution.hpp  NormalDistribution.cpp  NormalDistribution.hpp  UniformIntDistribution.cpp  UniformIntDistribution.hpp  UniformRealDistribution.cpp  UniformRealDistribution.hpp
src/hash/: MurmurHash3.cpp
src/sketches/: FastExpSketch.cpp  FastExpSketch.hpp  QSketch.cpp  QSketch.hpp  Sketch.cpp  Sketch.hpp
test/: main.cpp
